--- a/styles/style.css
+++ b/styles/style.css
@@ -16,9 +16,6 @@ p {
 }
 
 .pelicula{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   border-radius: 0rem 2rem 0rem 2rem;
 }
   
@@ -26,3 +23,43 @@ img{
   border-radius: 0px 20px 0px 20px;
 }
     
+/* OPACITY BOX */
+.proyectoImg {
+  position: relative;
+  background-color: white;
+  border-radius: var(--border-radius)
+}
+
+.image {
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  border-radius: var(--border-radius)
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.proyectoImg:hover .image {
+  opacity: 0.3;
+}
+
+.proyectoImg:hover .middle {
+  opacity: 1;
+}
+/* ----- */
+
+.text {
+  color: black;
+  font-family: "Lobster";
+  font-size: 30px;
+}
+/* fin opacity box */
